2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c: (ephy_tab_update_file_monitor):

	Fix the check for unchanged address to check if we even
	have a monitor at all. Fixes auto-reload on a file:// URI
	loaded after a blank page.
	Also modify the 'is local' check to just check for
	file:// prefix on URI.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-find-toolbar.c: (ephy_find_toolbar_open):

	Don't empty find entry on Ctrl-F.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.7.5 ===

	* NEWS:

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:
	* embed/mozilla/mozilla-embed-single.cpp:

	Don't use ext handler for ftp://.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-file-helpers.c: (ephy_file_launch_handler):

	Change a g_return_if_fail into a regular return.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c: (ephy_window_delete_event),
	(ephy_window_class_init), (ephy_window_init):

	Use class closure for delete event instead of signal handler.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-topic-action.c:
	(ephy_topic_action_sync_label):

	Use strlen, not hardcoded length.

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c: (ephy_tab_finalize):

	Fix mem leak.

2005-08-17  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-persist.h:
	* embed/mozilla/mozilla-embed-persist.cpp:

	Add EPHY_EMBED_PERSIST_FROM_CACHE, and try harder to get a cache
	descriptor for the source URL.

	* src/popup-commands.c: (save_property_url),
	(popup_cmd_set_image_as_background), (save_temp_source):

	Use EPHY_EMBED_PERSIST_FROM_CACHE to try to get the content from
	cache when saving background, images or links. Part of bug #168554.

2005-08-17  Christian Persch  <chpe@cvs.gnome.org>
