@@ -1,3 +1,9 @@
+2005-08-22  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/GlobalHistory.cpp:
+
+	Remove check for redirected URL. Fixes bug #313756.
+
 2005-08-21  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-tab.c: (ephy_tab_update_file_monitor):
